; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_block_if.c_blockif_read.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_block_if.c_blockif_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blockif_ctxt = type { i32 }
%struct.blockif_req = type { i32 }

@BLOCKIF_SIG = common dso_local global i64 0, align 8
@BOP_READ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @blockif_read(%struct.blockif_ctxt* %0, %struct.blockif_req* %1) #0 {
  %3 = alloca %struct.blockif_ctxt*, align 8
  %4 = alloca %struct.blockif_req*, align 8
  store %struct.blockif_ctxt* %0, %struct.blockif_ctxt** %3, align 8
  store %struct.blockif_req* %1, %struct.blockif_req** %4, align 8
  %5 = load %struct.blockif_ctxt*, %struct.blockif_ctxt** %3, align 8
  %6 = getelementptr inbounds %struct.blockif_ctxt, %struct.blockif_ctxt* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i64, i64* @BLOCKIF_SIG, align 8
  %9 = trunc i64 %8 to i32
  %10 = icmp eq i32 %7, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load %struct.blockif_ctxt*, %struct.blockif_ctxt** %3, align 8
  %14 = load %struct.blockif_req*, %struct.blockif_req** %4, align 8
  %15 = load i32, i32* @BOP_READ, align 4
  %16 = call i32 @blockif_request(%struct.blockif_ctxt* %13, %struct.blockif_req* %14, i32 %15)
  ret i32 %16
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @blockif_request(%struct.blockif_ctxt*, %struct.blockif_req*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
